# mnist_linux_benchmark

./: .gitignore  README.md  environment.yml  setup.sh
cpp/: README.md
cpp/cpp_benchmark/: CMakeLists.txt
cpp/cpp_benchmark/src/: main.cpp
python/: README.md  environment.yml  python.py  requirements.txt
python/stats/: py_metrics.csv  py_metrics_detailed.csv  py_training_summary.txt
rust/: README.md  download_libtorch.sh
rust/rust_benchmark/: Cargo.toml  setup_env.sh
rust/rust_benchmark/src/: main.rs
rust/rust_benchmark/stats/: rust_metrics.csv  rust_metrics_detailed.csv  rust_training_summary.txt
